HW7. Added About company for 960px

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -78,55 +78,56 @@
         </header>
 
         <!--ABOUT COMPANY-->
-        <section class="about_company position-center">
-            <div class="info_block">
-                <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
-                    neque. Praesent rhoncus ultrices posuere.
-                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
-                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+        <div class="about_company__wrapper">
+            <section class="about_company position-center">
+                <div class="info_block">
+                    <div class="title">about our company</div>
+                    <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                        neque. Praesent rhoncus ultrices posuere.
+                        Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                        Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                        Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                        Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                        Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                    <a class="link about_company__link" href="">read more</a>
                 </div>
-                <a class="link about_company__link" href="">read more</a>
-            </div>
 
-            <div class="info_block">
-                <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
-                    neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar.
-                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
-                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                <div class="info_block">
+                    <div class="title">about our company</div>
+                    <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                        neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar.
+                        Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                        Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                        Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                        Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                    <a class="link about_company__link" href="">read more</a>
                 </div>
-                <a class="link about_company__link" href="">read more</a>
-            </div>
 
-            <div class="info_block">
-                <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
-                    neque. Praesent rhoncus ultrices posuere.  Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
-                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                <div class="info_block">
+                    <div class="title">about our company</div>
+                    <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                        neque. Praesent rhoncus ultrices posuere.  Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                        Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                        Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                    <a class="link about_company__link" href="">read more</a>
                 </div>
-                <a class="link about_company__link" href="">read more</a>
-            </div>
-
-        </section>
+            </section>
+        </div>
 
         <!--PINGBULLER -->
         <div class="news_wrapper">
