HW7. Added Started Banners for 960px

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -130,6 +130,7 @@
         </div>
 
         <!--PINGBULLER -->
+        <div class="news">
         <div class="news_wrapper">
             <section class="pingbuller">
                 <div class="pingbuller__info_block">
@@ -158,7 +159,7 @@
                 </ul>
             </section>
 
-            <!--RECENT UODATES-->
+            <!--RECENT UPDATES-->
             <section class="recent_updates">
             <h2 class="title title--size--l recent_updates__title">recent updates</h2>
             <div class="recent_updates__post">
@@ -178,17 +179,20 @@
             <div class="recent_updates__post">
                 <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
                 <div class="summary">Posted by Admin on March 13
-                    <span class="hidden"> 2012<span class="hidden-m">in Blog Updates</span></span>
+                    <span class="hidden"> 2012<span class="hidden-m"> in Blog Updates</span></span>
                 </div>
             </div>
             <a class="link recent_updates__link" href="">more blog posts</a>
 
         </section>
         </div>
+        </div>
 
         <!--BANNERS-->
         <section class="banners">
+            <div class="banners__width">
             <div class="banners__wrapper clearfix">
+
                 <a href="https://marathon.ua/billabong/" target="_blank">
                     <img src="img/banner1.png" alt="billabong" class="banners__item banner1">
                 </a>
@@ -212,6 +216,7 @@
                 <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
                     <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
                 </a>
+            </div>
             </div>
         </section>
 
@@ -256,6 +261,7 @@
                     aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                 </div>
             </div>
+
 
         </section>
 
