HW7. Added Recent updates block for 960px

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -191,30 +191,30 @@
         <!--BANNERS-->
         <section class="banners">
             <div class="banners__width">
-            <div class="banners__wrapper clearfix">
+            <div class="banners__wrapper">
 
-                <a href="https://marathon.ua/billabong/" target="_blank">
-                    <img src="img/banner1.png" alt="billabong" class="banners__item banner1">
+                <a href="https://marathon.ua/billabong/" target="_blank" class="banners__item">
+                    <img src="img/banner1.png" alt="billabong" class="banner1">
                 </a>
 
-                <a href="https://www.gucci.com/int/en/" target="_blank">
-                    <img src="img/banner2.png" alt="gucci" class="banners__item banner2">
+                <a href="https://www.gucci.com/int/en/" target="_blank" class="banners__item">
+                    <img src="img/banner2.png" alt="gucci" class="banner2">
                 </a>
 
-                <a href="#">
-                    <img src="img/banner3.png" alt="" class="banners__item banner3">
+                <a href="#" class="banners__item">
+                    <img src="img/banner3.png" alt="" class="banner3">
                 </a>
 
-                <a href="http://www.awsmbrand.com/" target="_blank">
-                    <img src="img/banner4.png" alt="awsm" class="banners__item banner4">
+                <a href="http://www.awsmbrand.com/" target="_blank" class="banners__item">
+                    <img src="img/banner4.png" alt="awsm" class="banner4">
                 </a>
 
-                <a href="https://bigl.ua/sc-14515-rvca" target="_blank">
-                    <img src="img/banner5.png" alt="rvca" class="banners__item banner5">
+                <a href="https://bigl.ua/sc-14515-rvca" target="_blank" class="banners__item">
+                    <img src="img/banner5.png" alt="rvca" class="banner5">
                 </a>
 
-                <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
-                    <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
+                <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank" class="banners__item">
+                    <img src="img/banner6.png" alt="VonZipper" class="banner6">
                 </a>
             </div>
             </div>
@@ -223,46 +223,62 @@
         <!--NEWS CATEGORIES-->
         <section class="news_categories hidden">
             <h2 class="hidden-all">News</h2>
-            <div class="news_categories__post">
-                <div class="title news_categories__title">news categories</div>
-                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
-                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
-                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
-                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+
+            <div class="news_categories__wrapper">
+                <div class="news_categories__post"> <!--the 1st block is displaied only for 960px-->
+                    <div class="title news_categories__title--large">PIGBULL<span class="news_categories__title--light">ER</span></div>
+                    <div class="news_categories__title--description">Copyright 2013, Pingbull AS</div>
+                    <div class="summary news_categories__summary--960">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                        non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                        aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                </div>
+
+                <div class="news_categories__post">
+                    <div class="title news_categories__title hidden-960">news categories</div>
+                    <div class="title news_categories__title">recent comments</div> <!--displaied only for 960px-->
+                    <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                        non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                        aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                </div>
+
+                <div class="news_categories__post">
+                    <div class="title news_categories__title">news categories</div>
+                    <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                        non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                        aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
+                </div>
+
+                <div class="news_categories__post"> <!--the last block is not displaied for 960px-->
+                    <div class="title news_categories__title">news categories</div>
+                    <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                        non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                        Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                        aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
                 </div>
             </div>
-
-            <div class="news_categories__post">
-                <div class="title news_categories__title">news categories</div>
-                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
-                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
-                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
-                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
-                </div>
-            </div>
-
-            <div class="news_categories__post">
-                <div class="title news_categories__title">news categories</div>
-                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
-                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
-                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
-                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
-                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
-                </div>
-            </div>
-
-
         </section>
 
         <!--FOOTER-->
