HW7. Added Recent updates block for 960px

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -23,7 +23,7 @@
         <header class="header">
             <!--LOGO-->
             <div class="header__wrapper">
-                <div class="logo header__logo">PINGBULL<span class="logo--end"> ER</span></div>
+                <div class="logo header__logo">PINGBULL<span class="logo--end">ER</span></div>
 
             <!--Header MENU-->
                 <nav >
@@ -283,21 +283,23 @@
 
         <!--FOOTER-->
         <footer class="footer position-center">
+            <div class="footer__wrapper">
 
-            <nav class="hidden footer__nav">
-                <ul class="menu footer__menu">
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">HOME</a></li>
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">about</a></li>
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">blog</a></li>
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">products</a></li>
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="">lorem ipsum</a></li>
-                    <li class="menu__item"><a class="menu__link menu__link-small" href="">dolor sit amet</a>
+                <nav class="hidden footer__nav">
+                    <ul class="menu footer__menu">
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="#">HOME</a></li>
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="#">about</a></li>
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="#">blog</a></li>
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="#">products</a></li>
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="">lorem ipsum</a></li>
+                        <li class="menu__item"><a class="menu__link menu__link-small" href="">dolor sit amet</a>
 
-                </ul>
-            </nav>
+                    </ul>
+                </nav>
 
-            <div class="summary summary--size--s footer__summary">Designed by
-                <span class="summary--bold"> Pingbull AS</span>
+                <div class="summary summary--size--s footer__summary">Designed by
+                    <span class="summary--bold"> Pingbull AS</span>
+                </div>
             </div>
         </footer>
 
