--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -22,7 +22,9 @@
         <header class="header__wrapper position-center--horizontal">
             <!--LOGO-->
             <div class="header">
-                <div class="header__logo"><a href="http://pingbull.se/" target="_blank"><img src="img/header_logo.png"></a></div>
+                <div class="header__logo">
+                    <a href="http://pingbull.se/" target="_blank"><img src="img/header_logo.png"></a>
+                </div>
 
             <!--Header MENU-->
                 <nav >
