HW7. Finished 768px

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -42,10 +42,10 @@
                             <a class="menu__link" href="#">products</a>
                         </li>
                         <li class="menu__item menu__item__hidden">
-                            <a class="menu__link" href="">lorem ipsum</a>
+                            <a class="menu__link" href="#">lorem ipsum</a>
                         </li>
                         <li class="menu__item menu__item__hidden">
-                            <a class="menu__link" href="">dolor sit amet</a>
+                            <a class="menu__link" href="#">dolor sit amet</a>
                         </li>
                     </ul>
                 </nav>
@@ -54,7 +54,7 @@
                     <div class="slider__wrapper">
                         <div class="slider__text">
                             <div class="slider__name">lorem ipsum dolor</div>
-                            <div class="slider__description">it will make all of your dreams come<span class=""> true</span></div>
+                            <div class="slider__description">it will make all of your dreams come<span class="hidden-768"> true</span></div>
                             <div class="summary slider__summary hidden hidden-480">
                                 Semper sollicitudin gravida eget,
                                 vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a.
@@ -158,7 +158,7 @@
 
             <!--RECENT UPDATES-->
             <section class="recent_updates">
-                <h2 class="title title--size--l recent_updates__title">recent updates</h2>
+                <h2 class="title recent_updates__title">recent updates</h2>
                 <div class="recent_updates__post">
                     <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
                     <div class="summary">Posted by Admin on March 13
@@ -225,7 +225,7 @@
                 </div>
                 <div class="news_categories__post">
                     <div class="title news_categories__title hidden-960">news categories</div>
-                    <div class="title news_categories__title">recent comments</div> <!--displaied only for 960px-->
+                    <div class="title news_categories__title hidden-768">recent comments</div> <!--displaied only for 960px-->
                     <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
                         non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
                         Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
